[package]
name = "experiment-github-star"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
futures = "0.3.31"
rig-core = "0.6.0"
anyhow = "1.0.95"
schemars = "0.8.21"
serde_json = "1.0.135"
itertools = "0.14.0"
csv = "1.3.1"

[[bin]]
name = "rig"
path = "src/rig.rs"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "schema"

[[bin]]
name = "load_starred_repositories"
path = "src/bin/01_load_starred_repositories.rs"

[[bin]]
name = "classify_repositories"
path = "src/bin/02_classify_repositories.rs"


[[bin]]
name = "create_readme"
path = "src/bin/03_create_readme.rs"
